[#ABM-32] get isbn 13 list from open library